<resources>
    <string name="app_name">Calculadora</string>
    <string name="edtResultado">Calculadora</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="btnSoma">+</string>
    <string name="btnSubtracao">-</string>
    <string name="btnMultiplicacao">*</string>
    <string name="btnDivisao">/</string>

    <string name="btnHistorico">Histórico</string>
    <string name="btnResultado">Resultado</string>
    <string name="btnLimpar">C</string>
    <string name="btnIgual">=</string>

    <string name="txtTodoHistorico">"Todo histórico do SharedPreferences"</string>

    <string name="txtHistoricoAtual">"Histórico atual na Lista"</string>

</resources>
