<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fa7.calculadora.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:id="@+id/txtResultado"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:text="@string/edtResultado" />

    <Button
        android:text="@string/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btn1"
        android:layout_below="@+id/txtResultado"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/btn4" />

    <Button
        android:text="@string/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn5"
        android:layout_alignStart="@+id/btn3"
        android:id="@+id/btn6" />

    <Button
        android:text="@string/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/btn7" />

    <Button
        android:text="@string/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn7"
        android:layout_alignEnd="@+id/btn5"
        android:id="@+id/btn8" />

    <Button
        android:text="@string/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn8"
        android:layout_alignStart="@+id/btn6"
        android:id="@+id/btn9" />

    <Button
        android:text="@string/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn5"
        android:layout_alignBaseline="@+id/btn4"
        android:layout_alignBottom="@+id/btn4"
        android:layout_alignStart="@+id/btn2" />

    <Button
        android:text="@string/btnSoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn3"
        android:layout_toEndOf="@+id/btn3"
        android:id="@+id/btnSoma" />

    <Button
        android:text="@string/btnSubtracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn6"
        android:layout_toEndOf="@+id/btn6"
        android:id="@+id/btnSubtracao" />

    <Button
        android:text="@string/btnMultiplicacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn9"
        android:layout_toEndOf="@+id/btn9"
        android:id="@+id/btnMultiplicacao" />

    <Button
        android:text="@string/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn0"
        android:layout_alignEnd="@+id/btn7"
        android:id="@+id/btnLimpar" />

    <Button
        android:text="@string/btnDivisao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnResultado"
        android:layout_toEndOf="@+id/btnResultado"
        android:id="@+id/btnDivisao" />

    <Button
        android:text="@string/btnHistorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:id="@+id/btnHistorico" />

    <Button
        android:text="@string/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btn0"
        android:layout_below="@+id/btn8"
        android:layout_alignStart="@+id/btn8" />

    <Button
        android:id="@+id/btnResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn0"
        android:layout_alignBottom="@+id/btn0"
        android:layout_alignStart="@+id/btn9"
        android:onClick="onClickSalvar"
        android:text="@string/btnIgual" />

    <Button
        android:text="@string/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn3"
        android:layout_alignBaseline="@+id/btn2"
        android:layout_alignBottom="@+id/btn2"
        android:layout_toEndOf="@+id/btn2" />

    <Button
        android:text="@string/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn2"
        android:layout_alignBaseline="@+id/btn1"
        android:layout_alignBottom="@+id/btn1"
        android:layout_toEndOf="@+id/btn1" />

</RelativeLayout>
